--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -22,4 +22,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          hub release create --draft --message="vNext" --generate-notes vNext
+          gh release create --draft --title="vNext" --generate-notes vNext
