--- a/.github/workflows/build_libraries.yml
+++ b/.github/workflows/build_libraries.yml
@@ -29,6 +29,7 @@ jobs:
         fetch-depth: "0"
 
     - name: Get dependencies
+      shell: bash
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
