--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, feat/* ]
+    branches: [ main, feat/*, rc/* ]
   pull_request:
-    branches: [ main, feat/* ]
+    branches: [ main, feat/*, rc/* ]
 
 jobs:
   test:
