--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -2,9 +2,9 @@ name: golangci-lint
 
 on:
   push:
-    branches: [ main, development, feat/* ]
+    branches: [ main, feat/*, rc/* ]
   pull_request:
-    branches: [ main, development, feat/* ]
+    branches: [ main, feat/*, rc/* ]
 
 permissions:
   contents: read
